--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -4,7 +4,7 @@
 # -------------------------------------------------------------------------------------
 
 title = "July Blog"
-baseURL = "https://example.org/"
+baseURL = "https://littleju1y.github.io/"
 theme = [
   "FixIt",
   "shortcode-docs-bookmark"
