--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -245,7 +245,7 @@ disableThemeInject = false
     # title shown in home page (HTML format is supported)
     title = ""
     # subtitle shown in home page (HTML format is supported)
-    subtitle = ""
+    subtitle = "我想我得了一种不学习就会死的病"
     # whether to use typeit animation for subtitle
     typeit = true
     # whether to show social links
